listにcreate機能を追加

--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,13 +1,11 @@
-<h1>Hello index here</h1>
-<div class="alert alert-primary" role="alert">
-  A simple primary alert—check it out!
-</div>
-<div class="alert alert-secondary" role="alert">
-  A simple secondary alert—check it out!
-</div>
-<div class="alert alert-success" role="alert">
-  A simple success alert—check it out!
-</div>
-<div class="alert alert-danger" role="alert">
-  A simple danger alert—check it out!
+<div class="topPage">
+  <div class="listWrapper">
+    <% @lists.each do |list| %>
+      <div class="list">
+        <div class="list_header">
+          <h2 class="list_header_title"><%= list.title %></h2>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
