--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -25,7 +25,45 @@
           font-size: 20px;
           margin: 0;
         }
+        &_action {
+          .fa-pen, .fa-trash {
+            font-size: 18px;
+            color: #8c8c8c;
+          }
+          .fa-trash {
+            margin-right: 10px;
+          }
+        }
       }
+
+      .cardWrapper {
+        overflow-y: scroll;
+        max-height: 76vh;
+        .card {
+          margin-bottom: 10px;
+          padding: 10px;
+          &_title {
+            font-size: 17px;
+          }
+          &_detail {
+            display: none;
+            &.is-exist {
+              display: block;
+              color: #999;
+              & > i {
+                display: block;
+              }
+            }
+          }
+        }
+        .addCard {
+          color: #8c8c8c;
+          &_link {
+            color: #8c8c8c;
+          }
+        }
+      }
+
     }
   }
 }
